updated portfolio piece pages

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ layout: default
         <li><a href="#contentinfo">Jump to Footer</a></li>
     </ul>
     
-    <img class="wordmark" src="images/wordmark.svg" alt="emily lavinskas">
-    <img class="toggle" src="images/menu.svg" alt="toggle">
+    <img class="wordmark" src="{{site.baseurl}}/images/wordmark.svg{{image}}" alt="emily lavinskas">
+    <img class="toggle" src="{{site.baseurl}}/images/menu.svg{{image}}" alt="toggle">
     
     <div class="toggle-panel">
         <nav id="nav" role="navigation">
@@ -36,21 +36,21 @@ layout: default
     <div class="skill-icons-placement">
         <div class="skill-icons">    
             <figure>
-                <img class="icons" src="images/skills-editorial.svg">
+                <img class="icons" src="{{site.baseurl}}/images/skills-editorial.svg{{image}}">
                 <figcaption class="icon-caption">Editorial</figcaption>
             </figure>
         </div>
 
         <div class="skill-icons">    
             <figure>
-                <img class="icons" src="images/skills-print.svg">
+                <img class="icons" src="{{site.baseurl}}/images/skills-print.svg{{image}}">
                 <figcaption class="icon-caption">Print Media</figcaption>
             </figure>
         </div>
 
         <div class="skill-icons">    
             <figure>
-                <img class="icons" src="images/skills-uiux.svg">
+                <img class="icons" src="{{site.baseurl}}/images/skills-uiux.svg{{image}}">
                 <figcaption class="icon-caption">UI/UX</figcaption>
             </figure>
         </div>
@@ -59,22 +59,22 @@ layout: default
     <div class="portfolio-section" id="portfolio">
        <div class="layer-portfolio-pieces">
            <a href="{{site.baseurl}}/portfoliopiece1/">
-               <img class="portfolio-piece" src="images/test-photo3.jpg" alt="">
+               <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo3-square.jpg{{image}}" alt="">
            </a>
            <a href="{{site.baseurl}}/portfoliopiece2/">
-               <img class="portfolio-piece" src="images/test-photo2.jpg" alt="">
+               <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo2-square.jpg{{image}}" alt="">
            </a>
            <a href="{{site.baseurl}}/portfoliopiece3/">
-               <img class="portfolio-piece" src="images/test-photo.jpg" alt="">
+               <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo-square.jpg{{image}}" alt="">
            </a>
            <a href="{{site.baseurl}}/portfoliopiece4/">
-               <img class="portfolio-piece" src="images/test-photo5.jpg" alt="">
+               <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo6-square.jpg{{image}}" alt="">
            </a>
            <a href="{{site.baseurl}}/portfoliopiece5/">
-               <img class="portfolio-piece" src="images/test-photo6.jpg" alt="">
+               <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo5-square.jpg{{image}}" alt="">
            </a>
            <a href="{{site.baseurl}}/portfoliopiece6/">
-               <img class="portfolio-piece" src="images/test-photo4.jpg" alt="">
+               <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo4-square.jpg{{image}}" alt="">
            </a>
         </div> 
     </div>
@@ -85,9 +85,9 @@ layout: default
                 <a href="mailto:hey@emilylavinskas.ca?Subject=Hi There!" target="_top" class="email">hey@emilylavinskas.ca</a>
             </div>
             <div class="contact-icons">
-                <a href="http://behance.net/emilycmyk"><img class="sm-icon" src="images/behance-icon.svg" alt="behance icon"></a>
-                <a href="https://ca.linkedin.com/in/emilylavinskas"><img class="sm-icon" src="images/linkedin-icon.svg" alt="linkedin icon"></a>
-                <a href="http://instagram.com/hey.imemily"><img class="sm-icon" src="images/instagram-icon.svg" alt="instagram icon"></a> 
+                <a href="{{site.baseurl}}/http://behance.net/emilycmyk"><img class="sm-icon" src="{{site.baseurl}}/images/behance-icon.svg{{image}}" alt="behance icon"></a>
+                <a href="{{site.baseurl}}/https://ca.linkedin.com/in/emilylavinskas"><img class="sm-icon" src="{{site.baseurl}}/images/linkedin-icon.svg{{image}}" alt="linkedin icon"></a>
+                <a href="{{site.baseurl}}/http://instagram.com/hey.imemily"><img class="sm-icon" src="{{site.baseurl}}/images/instagram-icon.svg{{image}}" alt="instagram icon"></a> 
             </div>
     </div>
 </main>
