--- a/portfoliopiece1.html
+++ b/portfoliopiece1.html
@@ -1,5 +1,24 @@
 ---
 layout: portfolio-default
 ---
+<a href="{{site.baseurl}}/"><img class="pp-back-button" src="{{site.baseurl}}/images/back-button.svg{{image}}" alt="back button"></a>
 
-<img class="head-photo" src="images/test-photo3.jpg" alt="portfolio piece">
+<h1 class="pp-main-title">Four Articles, One Design</h1>
+<h2 class="pp-sub-title">Editorial Layout</h2>
+
+<hr>
+
+<div class="pp-desc-section">
+    <h3 class="pp-title">The Goal</h3>
+    <p class="pp-body-copy">Here is where I will write about what the project goals that needed to be obtained were.</p>
+
+    <h3 class="pp-title">The Idea</h3>
+    <p class="pp-body-copy">Here is where I will describe what my idea for the project at hand would be.</p>
+
+    <h3 class="pp-title">The Process</h3>
+    <p class="pp-body-copy">This will be where I will write out how I executed the design successfully.</p>
+</div>
+
+<img class="pp-process-images" src="{{site.baseurl}}/images/test-photo3-square.jpg{{image}}" alt="portfolio piece">
+<img class="pp-process-images" src="{{site.baseurl}}/images/test-photo3-square.jpg{{image}}" alt="portfolio piece">
+<img class="pp-process-images" src="{{site.baseurl}}/images/test-photo3-square.jpg{{image}}" alt="portfolio piece">
