updated portfolio piece pages

--- a/portfoliopiece4.html
+++ b/portfoliopiece4.html
@@ -3,7 +3,7 @@ layout: portfolio-default
 ---
 <a href="{{site.baseurl}}/"><img class="pp-back-button" src="{{site.baseurl}}/images/back-button.svg{{image}}" alt="back button"></a>
 
-<h1 class="pp-main-title">Moby Dick</h1>
+<h1 class="pp-main-title">Moby Dick Book Cover</h1>
 <h2 class="pp-sub-title">Book Cover Redesign</h2>
 
 <hr>
