--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ layout: default
                 <a href="mailto:hey@emilylavinskas.ca?Subject=Hi There!" target="_top" class="email">hey@emilylavinskas.ca</a>
             </div>
             <div class="contact-icons">
-                <a href="{{site.baseurl}}/http://behance.net/emilycmyk"><img class="sm-icon" src="{{site.baseurl}}/images/behance-icon.svg{{image}}" alt="behance icon"></a>
-                <a href="{{site.baseurl}}/https://ca.linkedin.com/in/emilylavinskas"><img class="sm-icon" src="{{site.baseurl}}/images/linkedin-icon.svg{{image}}" alt="linkedin icon"></a>
-                <a href="{{site.baseurl}}/http://instagram.com/hey.imemily"><img class="sm-icon" src="{{site.baseurl}}/images/instagram-icon.svg{{image}}" alt="instagram icon"></a> 
+                <a href="http://behance.net/emilycmyk"><img class="sm-icon" src="{{site.baseurl}}/images/behance-icon.svg{{image}}" alt="behance icon"></a>
+                <a href="https://ca.linkedin.com/in/emilylavinskas"><img class="sm-icon" src="{{site.baseurl}}/images/linkedin-icon.svg{{image}}" alt="linkedin icon"></a>
+                <a href="http://instagram.com/hey.imemily"><img class="sm-icon" src="{{site.baseurl}}/images/instagram-icon.svg{{image}}" alt="instagram icon"></a> 
             </div>
     </div>
 </main>
