--- a/portfoliopiece2.html
+++ b/portfoliopiece2.html
@@ -10,15 +10,18 @@ layout: portfolio-default
 
 <div class="pp-desc-section">
     <h3 class="pp-title">The Goal</h3>
-    <p class="pp-body-copy">Here is where I will write about what the project goals that needed to be obtained were.</p>
+    <p class="pp-body-copy">The goal of the photographs that are featured, was to obtain visually appealing photos that reflect the beauty of nature, and the beauty of dance. </p>
 
     <h3 class="pp-title">The Idea</h3>
-    <p class="pp-body-copy">Here is where I will describe what my idea for the project at hand would be.</p>
+    <p class="pp-body-copy">Creating a combination of photos in both the day and the night time. The photos showcase two beautiful elements put together–nature, and dance. The day time photos are meant to focus more on the positions of dance, and the night photographs are more focused on the tutu and how the lights really embody the positions. Both were also a focus on portraiture photography.</p>
 
     <h3 class="pp-title">The Process</h3>
-    <p class="pp-body-copy">This will be where I will write out how I executed the design successfully.</p>
+    <p class="pp-body-copy">With the use of a Canon Rebel T3, Adobe Photoshop Lightroom 5, an old dance friend of mine, and my trusty Macbook Pro sidekick, I photographed and photoshopped all of the photos seen below.</p>
 </div>
 
-<img class="pp-process-images" src="{{site.baseurl}}/images/test-photo2-square.jpg{{image}}" alt="portfolio piece">
-<img class="pp-process-images" src="{{site.baseurl}}/images/test-photo2-square.jpg{{image}}" alt="portfolio piece">
-<img class="pp-process-images" src="{{site.baseurl}}/images/test-photo2-square.jpg{{image}}" alt="portfolio piece">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-5.jpg{{image}}" alt="portfolio piece">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-2.jpg{{image}}" alt="portfolio piece">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-3.jpg{{image}}" alt="portfolio piece">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-1.jpg{{image}}" alt="portfolio piece">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-6.jpg{{image}}" alt="portfolio piece">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-4.jpg{{image}}" alt="portfolio piece">
