--- a/portfoliopiece2.html
+++ b/portfoliopiece2.html
@@ -3,7 +3,7 @@ layout: portfolio-default
 ---
 <a href="{{site.baseurl}}/"><img class="pp-back-button" src="{{site.baseurl}}/images/back-button.svg{{image}}" alt="back button"></a>
 
-<h1 class="pp-main-title">A Series of Photographs</h1>
+<h1 class="pp-main-title">Dance by Day &amp; Night</h1>
 <h2 class="pp-sub-title">Photography</h2>
 
 <hr>
@@ -23,5 +23,5 @@ layout: portfolio-default
 <img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-2.jpg{{image}}" alt="portfolio piece">
 <img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-3.jpg{{image}}" alt="portfolio piece">
 <img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-1.jpg{{image}}" alt="portfolio piece">
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-6.jpg{{image}}" alt="portfolio piece">
 <img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-4.jpg{{image}}" alt="portfolio piece">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-6.jpg{{image}}" alt="portfolio piece">
