updated link to portfolio page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ layout: default
            <a href="{{site.baseurl}}/portfoliopiece1/">
                <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo3-square.jpg{{image}}" alt="">
            </a>
-           <a href="{{site.baseurl}}/portfoliopiece2/">
+           <a href="{{site.baseurl}}/dbdn/">
                <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-photography-4.jpg{{image}}" alt="">
            </a>
            <a href="{{site.baseurl}}/portfoliopiece3/">
