updated app page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ layout: default
                <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-photography-4.jpg{{image}}" alt="">
            </a>
            <a href="{{site.baseurl}}/portfoliopiece3/">
-               <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo-square.jpg{{image}}" alt="">
+               <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-cyclingapp02.jpg{{image}}" alt="">
            </a>
            <a href="{{site.baseurl}}/portfoliopiece4/">
                <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo6-square.jpg{{image}}" alt="">
