fixed index link

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ layout: default
            <a href="{{site.baseurl}}/dbdn/">
                <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-photography-4.jpg{{image}}" alt="">
            </a>
-           <a href="{{site.baseurl}}/portfoliopiece3/">
+           <a href="{{site.baseurl}}/pf/">
                <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-cyclingapp-02.jpg{{image}}" alt="">
            </a>
            <a href="{{site.baseurl}}/portfoliopiece4/">
