--- a/dbdn.html
+++ b/dbdn.html
@@ -19,9 +19,9 @@ layout: portfolio-default
     <p class="pp-body-copy">With the use of a Canon Rebel T3, Adobe Photoshop Lightroom 5, an old dance friend of mine, and my trusty Macbook Pro sidekick, I photographed and photoshopped all of the photos seen below.</p>
 </div>
 
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-5.jpg{{image}}" alt="portfolio piece">
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-2.jpg{{image}}" alt="portfolio piece">
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-3.jpg{{image}}" alt="portfolio piece">
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-1.jpg{{image}}" alt="portfolio piece">
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-4.jpg{{image}}" alt="portfolio piece">
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-6.jpg{{image}}" alt="portfolio piece">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-5.jpg{{image}}" alt="dance photograph">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-2.jpg{{image}}" alt="dance photograph">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-3.jpg{{image}}" alt="dance photograph">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-1.jpg{{image}}" alt="dance photograph">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-4.jpg{{image}}" alt="dance photograph">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-6.jpg{{image}}" alt="dance photograph">
