--- a/pf.html
+++ b/pf.html
@@ -21,6 +21,6 @@ layout: portfolio-default
 
 <p class="view-more">View the entire case study on my <a href="http://behance.net/emilycmyk/>Behance.</p></a>
                                              
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-cyclingapp01.jpg{{image}}" alt="portfolio piece">
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-cyclingapp03.jpg{{image}}" alt="portfolio piece">
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-cyclingapp02.jpg{{image}}" alt="portfolio piece">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-cyclingapp-01.jpg{{image}}" alt="app design">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-cyclingapp-03.jpg{{image}}" alt="app design">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-cyclingapp-02.jpg{{image}}" alt="app design">
