updated photos and links

--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@ layout: default
     
     <div class="portfolio-section" id="portfolio">
        <div class="layer-portfolio-pieces">
-           <a href="{{site.baseurl}}/portfoliopiece1/">
-               <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo3-square.jpg{{image}}" alt="">
+           <a href="{{site.baseurl}}/maglay/">
+               <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo3-square.jpg{{image}}" alt="magazine layout piece">
            </a>
            <a href="{{site.baseurl}}/dbdn/">
-               <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-photography-4.jpg{{image}}" alt="">
+               <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-photography-4.jpg{{image}}" alt="photography pieces">
            </a>
            <a href="{{site.baseurl}}/pf/">
-               <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-cyclingapp-02.jpg{{image}}" alt="">
+               <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-cyclingapp-02.jpg{{image}}" alt="cycling mobile app">
            </a>
-           <a href="{{site.baseurl}}/portfoliopiece4/">
-               <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo6-square.jpg{{image}}" alt="">
+           <a href="{{site.baseurl}}/mdbc/">
+               <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-mdbc-01.jpg{{image}}" alt="moby dick book cover">
            </a>
            <a href="{{site.baseurl}}/portfoliopiece5/">
                <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo5-square.jpg{{image}}" alt="">
