--- a/portfoliopiece5.html
+++ b/portfoliopiece5.html
@@ -3,8 +3,8 @@ layout: portfolio-default
 ---
 <a href="{{site.baseurl}}/"><img class="pp-back-button" src="{{site.baseurl}}/images/back-button.svg{{image}}" alt="back button"></a>
 
-<h1 class="pp-main-title">Another Editorial</h1>
-<h2 class="pp-sub-title">Editorial Design</h2>
+<h1 class="pp-main-title">Another Piece</h1>
+<h2 class="pp-sub-title">Design</h2>
 
 <hr>
 
