updated magazine layout page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ layout: default
     <div class="portfolio-section" id="portfolio">
        <div class="layer-portfolio-pieces">
            <a href="{{site.baseurl}}/maglay/">
-               <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo3-square.jpg{{image}}" alt="magazine layout piece">
+               <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-maglay-01.jpg{{image}}" alt="magazine layout piece">
            </a>
            <a href="{{site.baseurl}}/dbdn/">
                <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-photography-4.jpg{{image}}" alt="photography pieces">
@@ -67,6 +67,8 @@ layout: default
            <a href="{{site.baseurl}}/pf/">
                <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-cyclingapp-02.jpg{{image}}" alt="cycling mobile app">
            </a>
+           
+           <!--
            <a href="{{site.baseurl}}/mdbc/">
                <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-mdbc-01.jpg{{image}}" alt="moby dick book cover">
            </a>
@@ -75,7 +77,7 @@ layout: default
            </a>
            <a href="{{site.baseurl}}/portfoliopiece6/">
                <img class="portfolio-piece" src="{{site.baseurl}}/images/test-photo4-square.jpg{{image}}" alt="">
-           </a>
+           </a> -->
         </div> 
     </div>
     
