--- a/maglay.html
+++ b/maglay.html
@@ -10,15 +10,18 @@ layout: portfolio-default
 
 <div class="pp-desc-section">
     <h3 class="pp-title">The Goal</h3>
-    <p class="pp-body-copy">Here is where I will write about what the project goals that needed to be obtained were.</p>
+    <p class="pp-body-copy">The goal of this project was to create a layout that could be consistently used across four articles that are of different topics: fashion, technology, fitness &amp; world news.</p>
 
     <h3 class="pp-title">The Idea</h3>
-    <p class="pp-body-copy">Here is where I will describe what my idea for the project at hand would be.</p>
+    <p class="pp-body-copy">The inspiration for this design layout came from the New York City based fashion magazine, Nylon. Nylon has more of a cluttered look than I felt would look best for the variety of topics covered in this project. I wanted to make it far more simple since the topics were so broad. I decided to go with clean white pages, with large titles, pull quotes &amp; page numbers. To keep the articles organized, the best choice was to go with colour-coaded sections. I decided to keep the body copy with a large, bold sans-serif for readability while keeping with the modern look of the design.</p>
 
     <h3 class="pp-title">The Process</h3>
-    <p class="pp-body-copy">This will be where I will write out how I executed the design successfully.</p>
+    <p class="pp-body-copy">To successfully create this design, I referenced Nylon Magazine, while adding my own spin on the look of the layouts, Adobe Photoshop, Adobe InDesign and a Macbook Pro, the magazine quickly came together with hardwork and dedication.</p>
 </div>
 
-<img class="pp-process-images" src="{{site.baseurl}}/images/test-photo3-square.jpg{{image}}" alt="portfolio piece">
-<img class="pp-process-images" src="{{site.baseurl}}/images/test-photo3-square.jpg{{image}}" alt="portfolio piece">
-<img class="pp-process-images" src="{{site.baseurl}}/images/test-photo3-square.jpg{{image}}" alt="portfolio piece">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-maglay-05.jpg{{image}}" alt="magazine layout">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-maglay-06.jpg{{image}}" alt="magazine layout">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-maglay-03.jpg{{image}}" alt="magazine layout">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-maglay-04.jpg{{image}}" alt="magazine layout">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-maglay-07.jpg{{image}}" alt="magazine layout">
+<img class="pp-process-images" src="{{site.baseurl}}/images/pp-maglay-02.jpg{{image}}" alt="magazine layout">
