added back top top

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
         </nav>
     </div>
 
-    <header class="billboard">
+    <header class="billboard" id="top">>
         <div class="layer-billboard"></div>
         <div class="border">
             <p class="billboard-text">Creative Thinker</p>
