--- a/maglay.html
+++ b/maglay.html
@@ -1,7 +1,7 @@
 ---
 layout: portfolio-default
 ---
-<a href="{{site.baseurl}}/"><img class="pp-back-button" src="{{site.baseurl}}/images/back-button.svg{{image}}" alt="back button"></a>
+<a href="{{site.baseurl}}/#portfolio"><img class="pp-back-button" src="{{site.baseurl}}/images/back-button.svg{{image}}" alt="back button"></a>
 
 <h1 class="pp-main-title">Four Articles, One Design</h1>
 <h2 class="pp-sub-title" id="top">Editorial Layout</h2>
