--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
     </ul>
     
     <img class="wordmark" src="{{site.baseurl}}/images/wordmark.svg{{image}}" alt="emily lavinskas">
-    <img class="toggle" src="{{site.baseurl}}/images/menu.svg{{image}}" alt="toggle">
+
     
     <div class="toggle-panel">
         <nav id="nav" role="navigation">
@@ -36,21 +36,21 @@ layout: default
     <div class="skill-icons-placement">
         <div class="skill-icons">    
             <figure>
-                <img class="icons" src="{{site.baseurl}}/images/skills-editorial.svg{{image}}">
+                <img class="icons" src="{{site.baseurl}}/images/skills-editorial.svg{{image}}" alt="editorial design">
                 <figcaption class="icon-caption">Editorial</figcaption>
             </figure>
         </div>
 
         <div class="skill-icons">    
             <figure>
-                <img class="icons" src="{{site.baseurl}}/images/skills-print.svg{{image}}">
+                <img class="icons" src="{{site.baseurl}}/images/skills-print.svg{{image}}" alt="print media">
                 <figcaption class="icon-caption">Print Media</figcaption>
             </figure>
         </div>
 
         <div class="skill-icons">    
             <figure>
-                <img class="icons" src="{{site.baseurl}}/images/skills-uiux.svg{{image}}">
+                <img class="icons" src="{{site.baseurl}}/images/skills-uiux.svg{{image}}" alt="ui/ux design">
                 <figcaption class="icon-caption">UI/UX</figcaption>
             </figure>
         </div>
