--- a/404.html
+++ b/404.html
@@ -1,6 +1,15 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en-ca">
+<head>
+    <meta charset="utf-8">
+    <title>Emily Lavinskas · Graphic Designer</title>
+    <meta name="handheldfriendly" content="true">
+    <meta name="mobileoptimized" content="240">
+    <meta name="viewport" content="width=device-width; initial-scale=1">
+    <link href="{{site.baseurl}}/css/portfolio.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
+</head>
 
 <div class="page-404">
     <h3 class="title-404">it seems like you've got lost!</h3>
@@ -8,3 +17,5 @@ layout: default
 
     <p class="return-home"><a href="http://emilylavinskas.ca/">return to portfolio</a></p>
 </div>
+    
+</html>
