--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ layout: default
     <div class="portfolio-section" id="portfolio">
        <div class="layer-portfolio-pieces">
            <a href="{{site.baseurl}}/maglay/">
-               <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-maglay-01.jpg{{image}}" alt="magazine layout piece">
+               <img class="portfolio-piece fade" src="{{site.baseurl}}/images/maglay2-cp-hp.jpg{{image}}" alt="magazine layout piece">
            </a>
            <a href="{{site.baseurl}}/dbdn/">
                <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-photography-4.jpg{{image}}" alt="photography pieces">
