--- a/maglay.html
+++ b/maglay.html
@@ -3,25 +3,34 @@ layout: portfolio-default
 ---
 <a href="{{site.baseurl}}/#portfolio"><img class="pp-back-button" src="{{site.baseurl}}/images/back-button.svg{{image}}" alt="back button"></a>
 
-<h1 class="pp-main-title">Four Articles, One Design</h1>
-<h2 class="pp-sub-title" id="top">Editorial Layout</h2>
-
-<hr>
+<header class="maglay-bb" id="top">
+    <h1 class="pp-main-title">An Interview with Lorde</h1>
+    <h2 class="pp-sub-title" id="top">Editorial Layout</h2>
+</header>
 
 <div class="pp-desc-section">
-    <h3 class="pp-title">The Goal</h3>
-    <p class="pp-body-copy">The goal of this project was to create a layout that could be consistently used across four articles that are of different topics: fashion, technology, fitness &amp; world news.</p>
+    <h3 class="pp-title">About The Project</h3>
+    <p class="pp-body-copy">The objective of this project was to create an editorial design for an article that was a minimum of 4000 words, without any single spread being strictly body copy. For this project, I had incorporated large, bold imagery alongside drastic pull quotes in a strong serif typeface to create drama within the piece. Anyone who has listened to Lorde, or even seen her, could tell that she is a dark, but dramatic person, both in every day life, and her in artistry. When selecting typefaces, I chose to go with Baskerville STD at a 9pt size. Baskerville was a very obvious choice for this article as it had a wide enough variety in its family that I could select different weights for the interviewer and for Lorde herself.</p>
 
-    <h3 class="pp-title">The Idea</h3>
-    <p class="pp-body-copy">The inspiration for this design layout came from the New York City based fashion magazine, Nylon. Nylon has more of a cluttered look than I felt would look best for the variety of topics covered in this project. I wanted to make it far more simple since the topics were so broad. I decided to go with clean white pages, with large titles, pull quotes &amp; page numbers. To keep the articles organized, the best choice was to go with colour-coaded sections. I decided to keep the body copy with a large, bold sans-serif for readability while keeping with the modern look of the design.</p>
+    <h3 class="pp-title">Tools Used</h3>
+        <div class="tools-icons-placement">
+            <div class="tools-icons">    
+                <figure>
+                    <img class="tools" src="{{site.baseurl}}/images/macbook-tool.svg{{image}}" alt="macbook pro">
+                </figure>
+            </div>
 
-    <h3 class="pp-title">The Process</h3>
-    <p class="pp-body-copy">To successfully create this design, I referenced Nylon Magazine, while adding my own spin on the look of the layouts, Adobe Photoshop, Adobe InDesign and a Macbook Pro, the magazine quickly came together with hardwork and dedication.</p>
+            <div class="tools-icons">    
+                <figure>
+                    <img class="tools" src="{{site.baseurl}}/images/indesign-tool.svg{{image}}" alt="adobe indesign">
+                </figure>
+            </div>
+        </div>        
 </div>
 
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-maglay-05.jpg{{image}}" alt="magazine layout">
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-maglay-06.jpg{{image}}" alt="magazine layout">
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-maglay-03.jpg{{image}}" alt="magazine layout">
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-maglay-04.jpg{{image}}" alt="magazine layout">
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-maglay-07.jpg{{image}}" alt="magazine layout">
-<img class="pp-process-images" src="{{site.baseurl}}/images/pp-maglay-02.jpg{{image}}" alt="magazine layout">
+<img class="pp-process-images" src="{{site.baseurl}}/images/maglay2-pp1.jpg{{image}}" alt="magazine layout">
+<img class="pp-process-images" src="{{site.baseurl}}/images/maglay2-pp3.jpg{{image}}" alt="magazine layout">
+<img class="pp-process-images" src="{{site.baseurl}}/images/maglay2-pp2.jpg{{image}}" alt="magazine layout">
+<img class="pp-process-images" src="{{site.baseurl}}/images/maglay2-pp4.jpg{{image}}" alt="magazine layout">
+<img class="pp-process-images" src="{{site.baseurl}}/images/maglay2-pp5.jpg{{image}}" alt="magazine layout">
+<img class="pp-process-images" src="{{site.baseurl}}/images/maglay2-pp6.jpg{{image}}" alt="magazine layout">
