fixed images for web

--- a/maglay.html
+++ b/maglay.html
@@ -1,7 +1,7 @@
 ---
 layout: portfolio-default
 ---
-<a href="{{site.baseurl}}/#portfolio"><img class="pp-back-button" src="{{site.baseurl}}/images/back-button.svg{{image}}" alt="back button"></a>
+<a href="{{site.baseurl}}/#portfolio"><img class="pp-back-button fade" src="{{site.baseurl}}/images/back-button.svg{{image}}" alt="back button"></a>
 
 <header class="maglay-bb" id="top">
     <h1 class="pp-main-title">An Interview with Lorde</h1>
