updated pedal free

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ layout: default
                <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-photography-4.jpg{{image}}" alt="photography pieces">
            </a>
            <a href="{{site.baseurl}}/pf/">
-               <img class="portfolio-piece" src="{{site.baseurl}}/images/pp-cyclingapp-02.jpg{{image}}" alt="cycling mobile app">
+               <img class="portfolio-piece fade" src="{{site.baseurl}}/images/pf-cp-hp.jpg{{image}}" alt="cycling mobile app">
            </a>
            
            <!--
