--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ layout: default
     </div>
     
     <div class="contact-section" id="contact">
-        <h2 class="contact-title">Impressed? Let's talk.</h2>
+        <h2 class="contact-title">Impressed? Let's work together.</h2>
             <div class="email-div-wrap">
                 <a href="mailto:hey@emilylavinskas.ca?Subject=Hi There!" target="_top" class="email fade">hey@emilylavinskas.ca</a>
             </div>
