--- a/dbdn.html
+++ b/dbdn.html
@@ -1,22 +1,39 @@
 ---
 layout: portfolio-default
 ---
-<a href="{{site.baseurl}}/#portfolio"><img class="pp-back-button" src="{{site.baseurl}}/images/back-button.svg{{image}}" alt="back button"></a>
+<a href="{{site.baseurl}}/#portfolio"><img class="pp-back-button fade" src="{{site.baseurl}}/images/back-button.svg{{image}}" alt="back button"></a>
 
-<h1 class="pp-main-title">Dance by Day &amp; Night</h1>
-<h2 class="pp-sub-title">Photography</h2>
-
-<hr>
+<header class="dbdn-bb" id="top">
+    <h1 class="pp-main-title">Dance by Day & Night</h1>
+    <h2 class="pp-sub-title" id="top">Photography</h2>
+</header>
 
 <div class="pp-desc-section">
-    <h3 class="pp-title">The Goal</h3>
-    <p class="pp-body-copy">The goal of the photographs that are featured, was to obtain visually appealing photos that reflect the beauty of nature, and the beauty of dance. </p>
+    <h3 class="pp-title">About the Project</h3>
+    <p class="pp-body-copy">The goal of the photographs that are featured, was to obtain visually appealing photos that reflect the beauty of nature, and the beauty of dance. Creating a combination of photos in both the day and the night time. The photos showcase two beautiful elements put together–nature, and dance. The day time photos are meant to focus more on the positions of dance, and the night photographs are more focused on the tutu and how the lights really embody the positions. Both were also a focus on portraiture photography.</p>
+    
+<hr>
 
-    <h3 class="pp-title">The Idea</h3>
-    <p class="pp-body-copy">Creating a combination of photos in both the day and the night time. The photos showcase two beautiful elements put together–nature, and dance. The day time photos are meant to focus more on the positions of dance, and the night photographs are more focused on the tutu and how the lights really embody the positions. Both were also a focus on portraiture photography.</p>
+    <h3 class="pp-title">Tools Used</h3>
+        <div class="tools-icons-placement">
+            <div class="tools-icons">    
+                <figure>
+                    <img class="tools" src="{{site.baseurl}}/images/macbook-tool.svg{{image}}" alt="macbook pro">
+                </figure>
+            </div>
+            
+            <div class="tools-icons">    
+                <figure>
+                    <img class="tools" src="{{site.baseurl}}/images/photoshop-tool.svg{{image}}" alt="adobe photoshop ">
+                </figure>
+            </div>
 
-    <h3 class="pp-title">The Process</h3>
-    <p class="pp-body-copy">With the use of a Canon Rebel T3, Adobe Photoshop Lightroom 5, an old dance friend of mine, and my trusty Macbook Pro sidekick, I photographed and photoshopped all of the photos seen below.</p>
+            <div class="tools-icons">    
+                <figure>
+                    <img class="tools" src="{{site.baseurl}}/images/lightroom-tool.svg{{image}}" alt="adobe photoshop lightroom">
+                </figure>
+            </div>
+        </div> 
 </div>
 
 <img class="pp-process-images" src="{{site.baseurl}}/images/pp-photography-5.jpg{{image}}" alt="dance photograph">
