--- a/pf.html
+++ b/pf.html
@@ -18,13 +18,13 @@ layout: portfolio-default
         <div class="tools-icons-placement">
             <div class="tools-icons">    
                 <figure>
-                    <img class="tools" src="{{site.baseurl}}/images/macbook-tool.svg{{image}}" alt="macbook pro">
+                    <a href="http://www.apple.com/ca/macbook-pro/"><img class="tools fade" src="{{site.baseurl}}/images/macbook-tool.svg{{image}}" alt="macbook pro"></a>
                 </figure>
             </div>
 
             <div class="tools-icons">    
                 <figure>
-                    <img class="tools" src="{{site.baseurl}}/images/illustrator-tool.svg{{image}}" alt="adobe illustrator">
+                    <a href="http://www.adobe.com/ca/products/illustrator.html"><img class="tools fade" src="{{site.baseurl}}/images/illustrator-tool.svg{{image}}" alt="adobe illustrator"></a>
                 </figure>
             </div>
         </div> 
