--- a/dbdn.html
+++ b/dbdn.html
@@ -5,7 +5,7 @@ layout: portfolio-default
 
 <header class="dbdn-bb" id="top">
     <h1 class="pp-main-title">Dance by Day & Night</h1>
-    <h2 class="pp-sub-title" id="top">Photography</h2>
+    <h2 class="pp-sub-title" id="top">Photography Series</h2>
 </header>
 
 <div class="pp-desc-section">
@@ -18,19 +18,19 @@ layout: portfolio-default
         <div class="tools-icons-placement">
             <div class="tools-icons">    
                 <figure>
-                    <img class="tools" src="{{site.baseurl}}/images/macbook-tool.svg{{image}}" alt="macbook pro">
+                    <a href="http://www.apple.com/ca/macbook-pro/"><img class="tools fade" src="{{site.baseurl}}/images/macbook-tool.svg{{image}}" alt="macbook pro"></a>
                 </figure>
             </div>
             
             <div class="tools-icons">    
                 <figure>
-                    <img class="tools" src="{{site.baseurl}}/images/photoshop-tool.svg{{image}}" alt="adobe photoshop ">
+                    <a href="http://www.adobe.com/ca/products/photoshop.html"><img class="tools fade" src="{{site.baseurl}}/images/photoshop-tool.svg{{image}}" alt="adobe photoshop "></a>
                 </figure>
             </div>
 
             <div class="tools-icons">    
                 <figure>
-                    <img class="tools" src="{{site.baseurl}}/images/lightroom-tool.svg{{image}}" alt="adobe photoshop lightroom">
+                    <a href="http://www.adobe.com/ca/products/photoshop-lightroom.html"><img class="tools fade" src="{{site.baseurl}}/images/lightroom-tool.svg{{image}}" alt="adobe photoshop lightroom"></a>
                 </figure>
             </div>
         </div> 
