--- a/maglay.html
+++ b/maglay.html
@@ -18,13 +18,13 @@ layout: portfolio-default
         <div class="tools-icons-placement">
             <div class="tools-icons">    
                 <figure>
-                    <img class="tools" src="{{site.baseurl}}/images/macbook-tool.svg{{image}}" alt="macbook pro">
+                    <a href="http://www.apple.com/ca/macbook-pro/"><img class="tools fade" src="{{site.baseurl}}/images/macbook-tool.svg{{image}}" alt="macbook pro"></a>
                 </figure>
             </div>
 
             <div class="tools-icons">    
                 <figure>
-                    <img class="tools" src="{{site.baseurl}}/images/indesign-tool.svg{{image}}" alt="adobe indesign">
+                    <a href="http://www.adobe.com/ca/products/indesign.html"><img class="tools fade" src="{{site.baseurl}}/images/indesign-tool.svg{{image}}" alt="adobe indesign"></a>
                 </figure>
             </div>
         </div>        
