--- a/dbdn.html
+++ b/dbdn.html
@@ -12,6 +12,11 @@ layout: portfolio-default
     <h3 class="pp-title">About the Project</h3>
     <p class="pp-body-copy">The goal of the photographs that are featured, was to obtain visually appealing photos that reflect the beauty of nature, and the beauty of dance. Creating a combination of photos in both the day and the night time. The photos showcase two beautiful elements put together–nature, and dance. The day time photos are meant to focus more on the positions of dance, and the night photographs are more focused on the tutu and how the lights really embody the positions. Both were also a focus on portraiture photography.</p>
     
+    <figure class="location">
+        <img class="location-tack" src="{{site.baseurl}}/images/location-button.svg{{image}}" alt="location tack">
+        <p class="location-p">Britannia Park, Ottawa.</p>
+    </figure>
+    
 <hr>
 
     <h3 class="pp-title">Tools Used</h3>
