--- a/dbdn.html
+++ b/dbdn.html
@@ -23,19 +23,19 @@ layout: portfolio-default
         <div class="tools-icons-placement">
             <div class="tools-icons">    
                 <figure>
-                    <a href="http://www.apple.com/ca/macbook-pro/"><img class="tools fade" src="{{site.baseurl}}/images/macbook-tool.svg{{image}}" alt="macbook pro"></a>
+                    <img class="tools fade" src="{{site.baseurl}}/images/macbook-tool.svg{{image}}" alt="macbook pro">
                 </figure>
             </div>
             
             <div class="tools-icons">    
                 <figure>
-                    <a href="http://www.adobe.com/ca/products/photoshop.html"><img class="tools fade" src="{{site.baseurl}}/images/photoshop-tool.svg{{image}}" alt="adobe photoshop "></a>
+                    <img class="tools fade" src="{{site.baseurl}}/images/photoshop-tool.svg{{image}}" alt="adobe photoshop ">
                 </figure>
             </div>
 
             <div class="tools-icons">    
                 <figure>
-                    <a href="http://www.adobe.com/ca/products/photoshop-lightroom.html"><img class="tools fade" src="{{site.baseurl}}/images/lightroom-tool.svg{{image}}" alt="adobe photoshop lightroom"></a>
+                    <img class="tools fade" src="{{site.baseurl}}/images/lightroom-tool.svg{{image}}" alt="adobe lightroom">
                 </figure>
             </div>
         </div> 
