--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: default
         </div>
     </div> 
     
-    <!-- <div class="portfolio-section" id="portfolio">
+    <div class="portfolio-section" id="portfolio">
        <div class="layer-portfolio-pieces">
            <a href="{{site.baseurl}}/maglay/">
                <img class="portfolio-piece" src="{{site.baseurl}}/images/maglay2-cp-hp.jpg{{image}}" alt="magazine layout piece">
@@ -68,7 +68,7 @@ layout: default
                <img class="portfolio-piece" src="{{site.baseurl}}/images/pf-cp-hp.jpg{{image}}" alt="cycling mobile app">
            </a>
         </div> 
-    </div> -->
+    </div>
     
     <div class="contact-section" id="contact">
         <h2 class="contact-title">Impressed? Let's work together.</h2>
