added fade back

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@ layout: default
     <div class="portfolio-section" id="portfolio">
        <div class="layer-portfolio-pieces">
            <a href="{{site.baseurl}}/maglay/">
-               <img class="portfolio-piece" src="{{site.baseurl}}/images/maglay2-cp-hp.jpg{{image}}" alt="magazine layout piece">
+               <img class="portfolio-piece fade" src="{{site.baseurl}}/images/maglay2-cp-hp.jpg{{image}}" alt="magazine layout piece">
            </a>
            <a href="{{site.baseurl}}/dbdn/">
-               <img class="portfolio-piece" src="{{site.baseurl}}/images/dbdn-cp-hp.jpg{{image}}" alt="photography pieces">
+               <img class="portfolio-piece fade" src="{{site.baseurl}}/images/dbdn-cp-hp.jpg{{image}}" alt="photography pieces">
            </a>
            <a href="{{site.baseurl}}/pf/">
-               <img class="portfolio-piece" src="{{site.baseurl}}/images/pf-cp-hp.jpg{{image}}" alt="cycling mobile app">
+               <img class="portfolio-piece fade" src="{{site.baseurl}}/images/pf-cp-hp.jpg{{image}}" alt="cycling mobile app">
            </a>
         </div> 
     </div>
