--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 ---
 layout: default
----s
+---
 
 <div class="page-404">
     <h3 class="title-404">it seems like you've got lost!</h3>
     <p class="ex-404">you did not internet very well today.</p>
 
-    <p class="return-home"><a href="https://emilylavinskas.ca/">return to portfolio</a></p>
+    <p class="return-home"><a href="http://emilylavinskas.ca/">return to portfolio</a></p>
 </div>
     
 </html>
