--- a/index.html
+++ b/index.html
@@ -57,20 +57,20 @@ layout: default
     
     <div class="portfolio-section" id="portfolio">
        <div class="layer-portfolio-pieces">
-           <a href="{{site.baseurl}}/maglay/">
+           <a href="{{site.baseurl}}/interview-lorde/">
                <img class="portfolio-piece fade" src="{{site.baseurl}}/images/maglay2-cp-hp.jpg{{image}}" alt="magazine layout piece">
            </a>
-           <a href="{{site.baseurl}}/dbdn/">
+           <a href="{{site.baseurl}}/dance-photography/">
                <img class="portfolio-piece fade" src="{{site.baseurl}}/images/dbdn-cp-hp.jpg{{image}}" alt="photography pieces">
            </a>
-           <a href="{{site.baseurl}}/pf/">
+           <a href="{{site.baseurl}}/pedal-free/">
                <img class="portfolio-piece fade" src="{{site.baseurl}}/images/pf-cp-hp.jpg{{image}}" alt="cycling mobile app">
            </a>
         </div> 
     </div>
     
     <div class="contact-section" id="contact">
-        <h2 class="contact-title">Impressed? Let's work together.</h2>
+        <h2 class="contact-title">Impressed? Let's get in touch.</h2>
             <div class="email-div-wrap">
                 <a href="mailto:hey@emilylavinskas.ca?Subject=Hi There!" target="_top" class="email fade">hey@emilylavinskas.ca</a>
             </div>
@@ -81,4 +81,9 @@ layout: default
             </div>
     </div>
 </main>
+
+<footer class="footer-info">
+    <a class="back-top" href="#top"><img class="fade back-top" src="{{site.baseurl}}/images/back-top.svg{{image}}" alt="back to top button"></a>
+    <p>Copyright &copy; Emily Lavinskas 2016</p>       
+</footer>
 </html>
