--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@ layout: default
            <a href="{{site.baseurl}}/pedal-free/">
                <img class="portfolio-piece fade" src="{{site.baseurl}}/images/pf-cp-hp.jpg{{image}}" alt="cycling mobile app">
            </a>
+           <a href="{{site.baseurl}}/moby-dick/">
+               <img class="portfolio-piece fade" src="{{site.baseurl}}/images/mdbc-cp-hp.jpg{{image}}" alt="cycling mobile app">
+           </a>
+           <a href="{{site.baseurl}}/four-articles/">
+               <img class="portfolio-piece fade" src="{{site.baseurl}}/images/maglay1-cp-hp.jpg{{image}}" alt="cycling mobile app">
+           </a>
+           <a href="{{site.baseurl}}/pantone-layout/">
+               <img class="portfolio-piece fade" src="{{site.baseurl}}/images/pantone-cp-hp.jpg{{image}}" alt="cycling mobile app">
+           </a>
         </div> 
     </div>
     
