updated about me

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ layout: default
     
 <main id="main" role="main">
     <div class="about-section" id="about">
-        <h1 class="bio-title">Hello, It's Me.</h1>
-        <p class="bio">My name is Emily. I'm a graphic designer based out of Ottawa with specialization in editorial design, print media &amp; UI/UX design. In addition to these specialties, I also have skills in photography and hand drawn typography. I am proficent in Adobe Illustrator, InDesign, Photoshop, Photoshop Lightroom, and have some knowledge of HTML, CSS &amp; Javascript. I am a passionate animal advocate, and wear black like it's going out of style. If I was in Star Wars, and had to pick between the Rebel Alliance and the Galactic Empire, I'd probably never come up with an answer. I'm a lover of autumn, good kerning, ampersands, Kate Spade, beer and bernese mountain dogs, but not in that particular order. I ramble a lot, and my biography writing is sub-par at best.</p>
+        <h1 class="bio-title">A Little Bit About Me.</h1>
+        <p class="bio">Hi, my name is Emily! I'm a graphic designer based out of Ottawa with specialization in editorial design, print media &amp; UI/UX design. In addition to these specialties, I also have skills in photography and hand drawn typography. I am proficent in Adobe Illustrator, InDesign, Photoshop, Photoshop Lightroom, and have some knowledge of HTML, CSS &amp; Javascript. I am a passionate animal advocate, and wear black like it's going out of style. If I was in Star Wars, and had to pick between the Rebel Alliance and the Galactic Empire, I'd probably never come up with an answer. I'm a lover of autumn, good kerning, ampersands, Kate Spade, beer and bernese mountain dogs, but not in that particular order. I ramble a lot, and my biography writing is sub-par at best.</p>
     </div>
         
     <div class="skill-icons-placement">
