--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ layout: default
             <div class="contact-icons">
                 <a href="http://behance.net/emilycmyk"><img class="sm-icon fade" src="{{site.baseurl}}/images/behance-icon.svg{{image}}" alt="behance icon"></a>
                 <a href="https://ca.linkedin.com/in/emilylavinskas"><img class="sm-icon fade" src="{{site.baseurl}}/images/linkedin-icon.svg{{image}}" alt="linkedin icon"></a>
-                <a href="http://instagram.com/hey.imemily"><img class="sm-icon fade" src="{{site.baseurl}}/images/instagram-icon.svg{{image}}" alt="instagram icon"></a> 
+                <a href="http://instagram.com/emlav.design"><img class="sm-icon fade" src="{{site.baseurl}}/images/instagram-icon.svg{{image}}" alt="instagram icon"></a> 
             </div>
     </div>
 </main>
