website to portfolio

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
     
 <main id="main" role="main">
     <div class="about-section" id="about">
-        <h1 class="bio-title">The Girl Behind the Website.</h1>
+        <h1 class="bio-title">The Girl Behind the Portfolio.</h1>
         <p class="bio">Hi there, I'm Emily! I'm a graphic designer based out of Ottawa, ON. I graduated from the Graphic Design program at Algonquin College with honours in June 2016, and I am currently working as Junior Graphic Designer in the Publications Department at Lee Valley Tools. I specialize in editorial design, print media &amp; UI/UX. I am also skillful in photography, have a keen eye for typesetting and an overall passion for typography. I am proficent in Adobe Illustrator, InDesign, Photoshop, Photoshop Lightroom, and I'm also knowledgable in HTML, CSS &amp; Javascript.</p>
             
         <p class="bio">In addition to my love of design, I am a passionate animal advocate, Star Wars junkie, collector of ampersands, lover of bernese mountain dogs (well... all dogs, really!) and devoted kate spade new york muse. You will find me at my happiest in autumn, and whenever there's a dog around (see, back to dogs again). Thanks for checking out my portfolio!</p>
