--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ layout: default
            <a href="{{site.baseurl}}/interview-lorde/">
                <img class="portfolio-piece fade" src="{{site.baseurl}}/images/maglay2-cp-hp.jpg{{image}}" alt="magazine layout piece">
            </a>
-           <a href="{{site.baseurl}}/dance-photography/">
-               <img class="portfolio-piece fade" src="{{site.baseurl}}/images/dbdn-cp-hp.jpg{{image}}" alt="photography pieces">
+           <a href="{{site.baseurl}}/shakeys/">
+               <img class="portfolio-piece fade" src="{{site.baseurl}}/images/shakeys-cp-hp.jpg{{image}}" alt="shakey's coffee branding and web design">
            </a>
            <a href="{{site.baseurl}}/pedal-free/">
                <img class="portfolio-piece fade" src="{{site.baseurl}}/images/pf-cp-hp.jpg{{image}}" alt="cycling mobile app">
