--- a/shakeys.html
+++ b/shakeys.html
@@ -3,7 +3,7 @@ layout: portfolio-default
 ---
 <a href="{{site.baseurl}}/#portfolio"><img class="pp-back-button fade" src="{{site.baseurl}}/images/back-button.svg{{image}}" alt="back button"></a>
 
-<header class="mdbc-bb" id="top">
+<header class="shakeys-bb" id="top">
     <h1 class="pp-main-title">Shakey's Coffee</h1>
     <h2 class="pp-sub-title" id="top">Branding & Web Design</h2>
 </header>
