update to portfolio

--- a/shakeys.html
+++ b/shakeys.html
@@ -10,7 +10,9 @@ layout: portfolio-default
 
 <div class="pp-desc-section">
     <h3 class="pp-title">About the Project</h3>
-    <p class="pp-body-copy"></p>
+    <p class="pp-body-copy">What originally began as a vehicle wrap project, quickly turned into a branding project that even lead into a website design. This project is based around a fictious coffee shop from Ottawa, ON by the name of <i>Shakey's Coffee</i>, who take great pleasure in living up their name by shaking, and never stirring your coffee. The café was founded by two brothers and is now run by their children. The logo is a hand drawn, unique and vectorized font based around a fun 70's style and a modern aspect was incorporated by using a sans serif for <i>coffee</i>. The colours were chosen to show a harmony between a relaxed grey-purple and the bright sunshine of a warm shade of yellow, overall giving you the customer a welcoming and comfort-of-your-own-home experience.</p>
+    
+    <p class="pp-body-copy">For the web design, I wanted to keep the design clean, modern with an emphasis on photography as this would reflect the physical café itself. I continued with the yellow and grey-purple throughout the website, but kept these very subtle as to not distract from the eye catching photography. The website overall is easy to navigate, and straight forward but is also a visually appealing and just as unique as the company it was designed for.</p>
     
 <hr>
 
